--- a/index.html
+++ b/index.html
@@ -20,17 +20,27 @@
 
             <h4>Dialogue & Choice System</h4>
             <img src="images/Opening Dialogue.png" alt="Opening dialogue scene" width="500"><br>
+            <small> Opening Dialogue Scene </small><br><br>
             <img src="images/Class.png" alt="Class selection screen" width="500"><br>
+            <small> Class Selection </small><br><br>
             <img src="images/Gender.png" alt="Gender choice screen" width="500"><br>
+            <small> Gender Selection </small><br><br>
             <img src="images/Interactions.png" alt="In-class character interaction" width="500"><br>
+            <small> Interaction with Miss Scarlet </small><br><br>
             <img src="images/Journal.png" alt="Emotion journal system" width="500"><br>
+            <small> Emotional Journal System </small><br><br>
 
             <h4>Exploration & Environment</h4>
             <img src="images/Opening Scene.png" alt="Game starting area" width="500"><br>
+            <small> Spawning Area </small><br><br>
             <img src="images/Lake.png" alt="Lake exploration scene" width="500"><br>
+            <small> Lake </small><br><br>
             <img src="images/Offering Station.png" alt="Sacred offering scene" width="500"><br>
+            <small> Sacred Offering Station </small><br><br>
             <img src="images/Shop.png" alt="Shop scene" width="500"><br>
+            <small> Shop </small><br><br>
             <img src="images/Tree House.png" alt="Tree house exploration scene" width="500"><br>
+            <small> Tree House </small><br><br>
 
             <h4>World Maps</h4>
             <img src="images/Player House Map.png" alt="Player House Interior" width="600"><br>
