--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Tay Teng Teng | Junior Game Developer</title>
-    <style> body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 2em; }
-    h1, h2 { color: #333; }
-    a { color: #0066cc; }</style>
+    <style> body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 20px;
+        color: #222;
+      }
+
+      h1, h2, h3, h4 {
+        color: #333;
+      }
+
+      img {
+        display: block;
+        margin: 10px auto;
+        max-width: 100%;
+        border-radius: 6px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      }
+
+      small {
+        display: block;
+        text-align: center;
+        margin-bottom: 20px;
+        color: #666;
+        font-style: italic;
+      }
+
+      a {
+        color: #3366cc;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+      .section {
+        margin-top: 40px;
+      }</style>
 </head>
 <body>
     <h1> Hello, I am Tay Teng Teng </h1>
