--- a/index.html
+++ b/index.html
@@ -56,42 +56,47 @@
             Unity, C# – An interactive story-based game based on emotional input.<br>
             <em>Key Features:</em> Character selection, gender identity choice, dialogue-based progression.<br>
 
-            <h4>Dialogue & Choice System</h4>
-            <img src="images/Opening Dialogue.png" alt="Opening dialogue scene" width="500"><br>
-            <small> Opening Dialogue Scene </small><br><br>
-            <img src="images/Class.png" alt="Class selection screen" width="500"><br>
-            <small> Class Selection </small><br><br>
-            <img src="images/Gender.png" alt="Gender choice screen" width="500"><br>
-            <small> Gender Selection </small><br><br>
-            <img src="images/Interactions.png" alt="In-class character interaction" width="500"><br>
-            <small> Interaction with Miss Scarlet </small><br><br>
-            <img src="images/Journal.png" alt="Emotion journal system" width="500"><br>
-            <small> Emotional Journal System </small><br><br>
+            <div class="section">
+                <h4>Dialogue & Choice System</h4>
+                <img src="images/Opening Dialogue.png" alt="Opening dialogue scene" width="500"><br>
+                <small> Opening Dialogue Scene </small><br><br>
+                <img src="images/Class.png" alt="Class selection screen" width="500"><br>
+                <small> Class Selection </small><br><br>
+                <img src="images/Gender.png" alt="Gender choice screen" width="500"><br>
+                <small> Gender Selection </small><br><br>
+                <img src="images/Interactions.png" alt="In-class character interaction" width="500"><br>
+                <small> Interaction with Miss Scarlet </small><br><br>
+                <img src="images/Journal.png" alt="Emotion journal system" width="500"><br>
+                <small> Emotional Journal System </small><br><br>
+            </div>
 
-            <h4>Exploration & Environment</h4>
-            <img src="images/Opening Scene.png" alt="Game starting area" width="500"><br>
-            <small> Spawning Area </small><br><br>
-            <img src="images/Lake.png" alt="Lake exploration scene" width="500"><br>
-            <small> Lake </small><br><br>
-            <img src="images/Offering Station.png" alt="Sacred offering scene" width="500"><br>
-            <small> Sacred Offering Station </small><br><br>
-            <img src="images/Shop.png" alt="Shop scene" width="500"><br>
-            <small> Shop </small><br><br>
-            <img src="images/Tree House.png" alt="Tree house exploration scene" width="500"><br>
-            <small> Tree House </small><br><br>
+            <hr>
+            <div class="section">
+                <h4>Exploration & Environment</h4>
+                <img src="images/Opening Scene.png" alt="Game starting area" width="500"><br>
+                <small> Spawning Area </small><br><br>
+                <img src="images/Lake.png" alt="Lake exploration scene" width="500"><br>
+                <small> Lake </small><br><br>
+                <img src="images/Offering Station.png" alt="Sacred offering scene" width="500"><br>
+                <small> Sacred Offering Station </small><br><br>
+                <img src="images/Shop.png" alt="Shop scene" width="500"><br>
+                <small> Shop </small><br><br>
+                <img src="images/Tree House.png" alt="Tree house exploration scene" width="500"><br>
+                <small> Tree House </small><br><br>
+             </div>
 
-            <h4>World Maps</h4>
-            <img src="images/Player House Map.png" alt="Player House Interior" width="600"><br>
-            <small> Player’s home interior – includes personal space and family dining area.</small><br><br>
-
-            <img src="images/Player Land Map.png" alt="Forest, lake, and offering areas" width="600"><br>
-            <small> Surrounding wilderness featuring the lake, offering station, and the ancient tree.</small><br><br>
-
-            <img src="images/Town Map.png" alt="Town layout" width="600"><br>
-            <small> Main town with various buildings and public spaces for interactions.</small><br><br>
-
-            <img src="images/Academy Map.png" alt="Academy interior" width="600"><br>
-            <small> Academy used for key plot events and character encounters.</small><br><br>
+            <hr>
+            <div class="section">
+                <h4>World Maps</h4>
+                <img src="images/Player House Map.png" alt="Player House Interior" width="600"><br>
+                <small> Player’s home interior – includes personal space and family dining area.</small><br><br>
+                <img src="images/Player Land Map.png" alt="Forest, lake, and offering areas" width="600"><br>
+                <small> Surrounding wilderness featuring the lake, offering station, and the ancient tree.</small><br><br>
+                <img src="images/Town Map.png" alt="Town layout" width="600"><br>
+                <small> Main town with various buildings and public spaces for interactions.</small><br><br>
+                <img src="images/Academy Map.png" alt="Academy interior" width="600"><br>
+                <small> Academy used for key plot events and character encounters.</small><br><br>
+            </div>
 
             <p><a href="https://youtu.be/YOUR_VIDEO_LINK" target="_blank">🎥 Watch Demo</a></p>
 
