--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
       <h4>World Maps</h4>
       <div class="gallery--maps">
         <img src="images/Player House Map.png" alt="Player House">
-        <img src="images/Player Land Map.png" alt="Land Map">
         <img src="images/Town Map.png" alt="Town Map">
-        <img src="images/Academy Map.png" alt="Academy Map" class="large">
+        <img src="images/Academy Map.png" alt="Academy Map">
+        <img src="images/Player Land Map.png" alt="Land Map" class="large">
       </div>
 
       <p style="text-align:center; margin-top:30px;">
