--- a/index.html
+++ b/index.html
@@ -66,18 +66,22 @@
     .gallery--maps {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: 160px;
       gap: 20px;
       margin-top: 20px;
     }
     
     .gallery--maps img {
       width: 100%;
+      object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     
     .gallery--maps img.large {
       grid-column: 1 / -1;
+      height: auto;
+      object-fit: initial;
     }
     .gallery img {
       width: 100%;
