--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     
     .gallery--maps img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -80,6 +81,7 @@
     
     .gallery--maps img.large {
       grid-column: 1 / -1;
+      grid-row: 2;
       height: auto;
       object-fit: initial;
     }
@@ -141,8 +143,8 @@
         <img src="images/Player Land Map.png" alt="Land Map" class="large">
       </div>
 
-      <p style="text-align:center; margin-top:30px;">
-        <a href="https://youtu.be/YOUR_VIDEO_LINK" target="_blank">🎥 Watch Demo</a>
+      <p style="text-align:center; margin-top:16px;">
+        <a href="https://youtu.be/YOUR_VIDEO_LINK" target="_blank"> Watch Demo</a>
       </p>
     </div>
 
