--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     .gallery--maps {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 160px;
+      grid-auto-rows: 240px;
       gap: 20px;
       margin-top: 20px;
     }
@@ -75,15 +75,16 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center top;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     
     .gallery--maps img.large {
       grid-column: 1 / -1;
-      grid-row: 2;
       height: auto;
       object-fit: initial;
+      object-position: initial;
     }
     .gallery img {
       width: 100%;
@@ -143,7 +144,7 @@
         <img src="images/Player Land Map.png" alt="Land Map" class="large">
       </div>
 
-      <p style="text-align:center; margin-top:16px;">
+      <p class="demo-link">
         <a href="https://youtu.be/YOUR_VIDEO_LINK" target="_blank"> Watch Demo</a>
       </p>
     </div>
