--- a/index.html
+++ b/index.html
@@ -96,6 +96,25 @@
     a:hover { text-decoration: underline; }
 
     .contact { text-align: center; margin: 60px 0; }
+
+    .demo-link {
+      text-align: center;
+      margin: 16px 0 40px;
+    }
+    
+    .demo-link a {
+      display: inline-block;
+      background: var(--accent);  
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    
+    .demo-link a:hover {
+      background: #005fa3;  
+    }
   </style>
 </head>
 <body>
