--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     .gallery--maps {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 240px;
+      grid-auto-rows: 240px auto;
       gap: 20px;
       margin-top: 20px;
     }
@@ -75,16 +75,13 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: center top;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     
     .gallery--maps img.large {
       grid-column: 1 / -1;
-      height: auto;
       object-fit: initial;
-      object-position: initial;
     }
     .gallery img {
       width: 100%;
