--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <img src="images/Gender.png" alt="Gender Selection">
         <img src="images/Interactions.png" alt="Character Interaction">
         <img src="images/Journal.png" alt="Emotion Journal">
+        <img src="images/Calming Game.png" alt="Calming Game">
       </div>
 
       <h4>Exploration &amp; Environment</h4>
@@ -150,6 +151,7 @@
         <img src="images/Offering Station.png" alt="Offering Station">
         <img src="images/Shop.png" alt="Shop">
         <img src="images/Tree House.png" alt="Tree House">
+        <img src="images/Academy Building.png" alt="Academy Building">
       </div>
 
       <h4>World Maps</h4>
