--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Tay Teng Teng | Game Dev Portfolio</title>
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -85,6 +84,8 @@
     }
     .gallery img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
@@ -180,3 +181,4 @@
   </main>
 </body>
 </html>
+
