--- a/index.html
+++ b/index.html
@@ -58,8 +58,17 @@
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+      grid-auto-rows: 200px;
       gap: 20px;
       margin-top: 20px;
+    }
+
+    .gallery img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     .gallery--maps {
@@ -82,12 +91,35 @@
       grid-column: 1 / -1;
       object-fit: initial;
     }
-    .gallery img {
+
+    .gallery--protraits{
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+
+    .gallery--protraits img{
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: auto;
+      border: 2px solid var(--accent);
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .gallery--sprites {
+      display: grid;
+      grid-template-colunmns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .gallery--sprites img{
+      width: 100%;
+      height: auto;
+      border: 2px solid var (--primary);
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     a { color: var(--accent); }
@@ -181,4 +213,5 @@
   </main>
 </body>
 </html>
+
 
