--- a/index.html
+++ b/index.html
@@ -200,6 +200,37 @@
       </p>
     </div>
 
+    <h4>Character Assets</h4>
+      <h5>Portrait Emotion Variants</h5>
+      <div class="gallery--portraits">
+        <img src="images/BoyNeutral.png" alt="Boy Neutral">
+        <img src="images/BoyHappy.png" alt="Boy Happy">
+        <img src="images/BoyAngry.png" alt="Boy Angry">
+        <img src="images/BoyUnhappy.png" alt="Boy Unhappy">
+        <img src="images/BoySigh.png" alt="Boy Sigh">
+        <img src="images/BoyAwkward.png" alt="Boy Awkward">
+        <img src="images/BoyConcerned.png" alt="Boy Concerned">
+        <img src="images/BoySleep.png" alt="Boy Sleep">
+        <img src="images/BoyUnimpressed.png" alt="Boy Unimpressed">
+        <img src="images/GirlNeutral.png" alt="Girl Neutral">
+        <img src="images/GirlHappy.png" alt="Girl Happy">
+        <img src="images/GirlAngry.png" alt="Girl Angry">
+        <img src="images/GirlUnhappy.png" alt="Girl Unhappy">
+        <img src="images/GirlSigh.png" alt="Girl Sigh">
+        <img src="images/GirlAwkward.png" alt="Girl Awkward">
+        <img src="images/GirlConcerned.png" alt="Girl Concerned">
+        <img src="images/GirlSleep.png" alt="Girl Sleep">
+        <img src="images/Gandpa.png" alt="Gandpa Portrait">
+      </div>
+
+     <h5>Miniature NPC Sprites</h5>
+      <div class="gallery--sprites">
+        <img src="images/MiniVillagerMan.png"  alt="Villager Man Sprites">
+        <img src="images/MiniVillagerWoman.png" alt="Villager Woman Sprites">
+        <img src="images/MiniOldMan.png"       alt="Old Man Sprites">
+        <img src="images/MiniNobleMan.png"     alt="Noble Man Sprites">
+      </div>
+
     <div class="project-card">
       <h3>Smart Recipe App</h3>
       <p><strong>Python, Figma</strong> – Recommends recipes based on allergies and nutrition data.</p>
@@ -213,5 +244,6 @@
   </main>
 </body>
 </html>
+
 
 
