--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
     .gallery--protraits{
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      grid-auto-rows: 120px;
       gap: 15px;
       margin-top: 20px;
     }
 
     .gallery--protraits img{
       width: 100%;
-      height: auto;
+      height: 100%;
       border: 2px solid var(--accent);
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -282,6 +283,7 @@
   </main>
 </body>
 </html>
+
 
 
 
