--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     .gallery--protraits{
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      grid-auto-rows: 120px;
+      grid-auto-rows: 140px;
       gap: 15px;
       margin-top: 20px;
     }
@@ -103,6 +103,7 @@
     .gallery--protraits img{
       width: 100%;
       height: 100%;
+      object-fit: contain;
       border: 2px solid var(--accent);
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -283,6 +284,7 @@
   </main>
 </body>
 </html>
+
 
 
 
