--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       object-fit: initial;
     }
 
-    .gallery--protraits{
+    .gallery--portraits{
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
       grid-auto-rows: 80px;
@@ -100,7 +100,7 @@
       margin-top: 20px;
     }
 
-    .gallery--protraits img{
+    .gallery--portraits img{
       width: 100%;
       height: 100%;
       object-fit: contain;
@@ -284,6 +284,7 @@
   </main>
 </body>
 </html>
+
 
 
 
