--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       padding-left: 12px;
       margin-top: 40px;
     }
+    h5 { margin-top: 30px; font-weight: 600; }
 
     .project-card {
       background: #fff;
@@ -220,7 +221,7 @@
       </p>
     </div>
 
-    <h4>Character Assets</h4>
+      <h4>Character Assets</h4>
       <h5>Player (Boy)</h5>
       <div class="gallery--portraits">
         <img src="images/BoyNeutral.png" alt="Boy Neutral">
@@ -278,6 +279,7 @@
   </main>
 </body>
 </html>
+
 
 
 
