--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
       </p>
 
       <h4>Character Assets</h4>
+      <p style="font-size:0.9em; color:#666;">
+        Portraits created with <a href="https://picrew.me/en/image_maker/644129" target="_blank">Picrew (Makówka’s Generator)</a>. Used under non-commercial educational terms for prototype demos only.</p>
+      
       <h5>Player (Boy)</h5>
       <div class="gallery--portraits">
         <img src="images/BoyNeutral.png" alt="Boy Neutral">
@@ -279,6 +282,7 @@
   </main>
 </body>
 </html>
+
 
 
 
