--- a/index.html
+++ b/index.html
@@ -226,11 +226,13 @@
         <img
           src="images/PlayerBoyIdle.gif"
           alt="Boy Idle Animation"
+          width="64"
           title="Idle Cycle"
         />
         <img
           src="images/PlayerBoyWalk.gif"
           alt="Boy Walk Animation"
+          width="64"
           title="Walk Cycle"
         />
       </div>
@@ -279,6 +281,7 @@
   </main>
 </body>
 </html>
+
 
 
 
