--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     }
     
     .gif-demo img {
-      width: 64px; 
+      width: 112px; 
       height: auto;
       image-rendering: pixelated;
       border: 1px solid #ccc;
@@ -226,16 +226,20 @@
         <img
           src="images/PlayerBoyIdle.gif"
           alt="Boy Idle Animation"
-          width="64"
           title="Idle Cycle"
         />
         <img
           src="images/PlayerBoyWalk.gif"
           alt="Boy Walk Animation"
-          width="64"
           title="Walk Cycle"
         />
       </div>
+      <p style="font-size:0.9em; color:#666;">
+        Sprites courtesy of the 
+        <a href="https://lyaseek.itch.io/minifvillagers" target="_blank">
+          MinifVillagers pack by LYASeeK
+        </a>.
+      </p>
     
       <h5>Player (Girl)</h5>
       <div class="gallery--portraits">
@@ -281,6 +285,7 @@
   </main>
 </body>
 </html>
+
 
 
 
