--- a/index.html
+++ b/index.html
@@ -270,7 +270,31 @@
         <img src="images/GirlConcerned.png" alt="Girl Concerned">
         <img src="images/GirlSleep.png" alt="Girl Sleep">
       </div>
-      <div class="sprite-demo girl"></div>
+       <div class="gif-demo">
+        <figure>
+          <img
+            src="images/PlayerGirlIdle.gif"
+            alt="Girl Idle Animation"
+            title="Idle Cycle"
+          />
+          <figcaption>Idle</figcaption>
+        </figure>
+
+        <figure>
+          <img
+            src="images/PlayerGirlWalk.gif"
+            alt="Girl Walk Animation"
+            title="Walk Cycle"
+          />
+          <figcaption>Walk</figcaption>
+        </figure>
+      </div>
+      <p style="font-size:0.9em; color:#666;">
+        Sprites courtesy of the 
+        <a href="https://lyaseek.itch.io/minifvillagers" target="_blank">
+          MinifVillagers pack by LYASeeK
+        </a>.
+      </p>
 
       <h5>NPC: Grandpa</h5>
       <div class="gallery--portraits">
@@ -303,6 +327,7 @@
   </main>
 </body>
 </html>
+
 
 
 
