--- a/index.html
+++ b/index.html
@@ -300,7 +300,22 @@
       <div class="gallery--portraits">
         <img src="images/Gandpa.png" alt="Grandpa Portrait">
       </div>
-      <div class="sprite-demo grandpa"></div>
+       <div class="gif-demo">
+        <figure>
+          <img
+            src="images/GrandpaIdle.gif"
+            alt="Grandpa Idle Animation"
+            title="Idle Cycle"
+          />
+          <figcaption>Idle</figcaption>
+        </figure>
+      </div>
+      <p style="font-size:0.9em; color:#666;">
+        Sprites courtesy of the 
+        <a href="https://lyaseek.itch.io/minifvillagers" target="_blank">
+          MinifVillagers pack by LYASeeK
+        </a>.
+      </p>
 
       <h5>NPC: Miss Scarlet</h5>
       <div class="gallery--portraits">
@@ -311,8 +326,23 @@
         <img src="images/Unhappy.png" alt="Scarlet Unhappy">
         <img src="images/Unimpress.png" alt="Scarlet Unimpressed">
       </div>
-      <div class="sprite-demo scarlet"></div>
       </div>
+       <div class="gif-demo">
+        <figure>
+          <img
+            src="images/MissScarletIdle.gif"
+            alt="Miss Scarlet Idle Animation"
+            title="Idle Cycle"
+          />
+          <figcaption>Idle</figcaption>
+        </figure>
+      </div>
+      <p style="font-size:0.9em; color:#666;">
+        Sprites courtesy of the 
+        <a href="https://lyaseek.itch.io/minifvillagers" target="_blank">
+          MinifVillagers pack by LYASeeK
+        </a>.
+      </p>
 
     <div class="project-card">
       <h3>Smart Recipe App</h3>
@@ -327,6 +357,7 @@
   </main>
 </body>
 </html>
+
 
 
 
